--- a/spring-cloud-vault/hello-world/src/main/resources/bootstrap.properties
+++ b/spring-cloud-vault/hello-world/src/main/resources/bootstrap.properties
@@ -1,10 +1,13 @@
 spring.application.name=my-spring-boot-app
-spring.cloud.vault.ssl.trust-store=file:../../work/keystore.jks
+#spring.cloud.vault.ssl.trust-store=file:../../work/keystore.jks
+spring.cloud.vault.ssl.trust-store=file:/Users/wangxuanzhong/workspaces/spring-cloud-vault-config-samples/work/keystore.jks
 spring.cloud.vault.ssl.trust-store-password=changeit
+spring.cloud.vault.uri=https://localhost:8210
 
-spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
+#spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
+spring.cloud.vault.token=s.MAbBYVtMcThltcsvGyEhd97q
 
-logging.level.org=WARN
-logging.level.com=WARN
+logging.level.org=debug
+logging.level.com=debug
 
 
