--- a/spring-cloud-vault/appid-custom-userid/src/main/resources/bootstrap.properties
+++ b/spring-cloud-vault/appid-custom-userid/src/main/resources/bootstrap.properties
@@ -1,11 +1,12 @@
 spring.application.name=my-spring-boot-app
-spring.cloud.vault.ssl.trust-store=file:../../work/keystore.jks
+#spring.cloud.vault.ssl.trust-store=file:../../work/keystore.jks
+spring.cloud.vault.ssl.trust-store=file:/Users/wangxuanzhong/workspaces/spring-cloud-vault-config-samples/work/keystore.jks
 spring.cloud.vault.ssl.trust-store-password=changeit
 
 spring.cloud.vault.authentication=appid
 spring.cloud.vault.app-id.user-id=example.appid.custom.CustomUserIdMechanism
 
-logging.level.org=WARN
-logging.level.com=WARN
+logging.level.org=debug
+logging.level.com=debug
 
 
