--- a/spring-cloud-vault/appid/src/main/resources/bootstrap.properties
+++ b/spring-cloud-vault/appid/src/main/resources/bootstrap.properties
@@ -1,12 +1,13 @@
 spring.application.name=my-spring-boot-app
-spring.cloud.vault.ssl.trust-store=file:../../work/keystore.jks
+#spring.cloud.vault.ssl.trust-store=file:../../work/keystore.jks
+spring.cloud.vault.ssl.trust-store=file:/Users/wangxuanzhong/workspaces/spring-cloud-vault-config-samples/work/keystore.jks
 spring.cloud.vault.ssl.trust-store-password=changeit
 
 spring.cloud.vault.authentication=appid
 spring.cloud.vault.app-id.user-id=mac_address
 spring.cloud.vault.app-id.network-interface=en0
 
-logging.level.org=WARN
-logging.level.com=WARN
+logging.level.org=debug
+logging.level.com=debug
 
 
