--- a/spring-vault/pom.xml
+++ b/spring-vault/pom.xml
@@ -20,7 +20,8 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-vault.version>2.2.0.M1</spring-vault.version>
-		<spring.version>5.2.0.RELEASE</spring.version>
+<!--		<spring.version>5.2.0.RELEASE</spring.version>-->
+		<spring.version>5.0.13.RELEASE</spring.version>
 	</properties>
 
 	<dependencyManagement>
