--- a/src/test/bash/bak/vault-2.conf
+++ b/src/test/bash/bak/vault-2.conf
@@ -2,9 +2,18 @@ backend "inmem" {
 }
 
 listener "tcp" {
-  address = "0.0.0.0:8200"
+  address = "127.0.0.1:9010"
+  tls_disable = 1
+}
+
+listener "tcp" {
+  address = "0.0.0.0:8210"
   tls_cert_file = "work/ca/certs/localhost.cert.pem"
   tls_key_file = "work/ca/private/localhost.decrypted.key.pem"
+  tls_min_version = "tls10"
+  tls_disable = 0
 }
 
 disable_mlock = true
+
+ui = true
